--- a/main.html
+++ b/main.html
@@ -52,11 +52,15 @@
 
   <div class="container rounded bg-white mt-5 mb-5" style="padding-bottom: 2%;">
     <div class="row">
-      <h1 style="font-size: 5vw; text-align: center; margin-top: 2%; font-family: Impact;">Welcome back, <span id="name-goes-here"></span>!
+      <h1 style="font-size: 5vw; text-align: center; margin-top: 2%">Welcome back, <span id="name-goes-here"></span>!
       </h1>
-      <h2 style="color: green; font-size: 4vw; text-align: center; font-family: 'Times New Roman';">Craving some more?</h2>
-      <h1 style="font-size: 3vw; margin-left: 3%; margin-top: 2%; font-family: 'Times New Roman';">Recomended Menu Items
-      </h1>
+      <h2 style="font-size: 4vw; color:green; text-align: center; margin-top: 2%">Craving some more?</h2>
+      <h1>Recomended Menu Items</h1>
+      <div id="Keto-go-here" class="row row-cols-auto"></div>
+      <div id="Gluten-Free-go-here" class="row row-cols-auto"></div>
+      <div id="Lactose-Free-go-here" class="row row-cols-auto"></div>
+      <div id="Pescatarian-go-here" class="row row-cols-auto"></div>
+      <div id="Vegetarian-go-here" class="row row-cols-auto"></div>
       <div id="Vegan-go-here" class="row row-cols-auto"></div>
     </div>
   </div>
