--- a/profile.html
+++ b/profile.html
@@ -87,16 +87,10 @@
               style="font-size: 100%; float: right;">expand_more</i></button>
           <div class="content">
             <h4><b style="color: darkgreen;">Q:</b> Are my restriction and preference choices permanent?</h4>
-            <h4 style="margin-left: 8%;"><b style="color: darkgreen;">A:</b> No, you can change your restrictions and
-              preferences with the "Edit diet preferences" button above.</h4>
+            <h4 style="margin-left: 8%;"><b style="color: darkgreen;">A:</b> No, you can change your restrictions with the "Edit diet preferences" button above.</h4>
             <h4><b style="color: darkgreen;">Q:</b> How do I log out?</h4>
             <h4 style="margin-left: 8%;"><b style="color: darkgreen;">A:</b> Below, there is a "Log Out" button that
               allows you to log out and access another account.</h4>
-            <h4><b style="color: darkgreen;">Q:</b> Why do I have a mix of my restrictions and preferences?</h4>
-            <h4 style="margin-left: 8%;"><b style="color: darkgreen;">A:</b> We found that restrictions and preferences
-              have large overlaps that would make multiple selections of the same category obsolete. For example, if you
-              chose Vegan and Pescatarian, the Vegan concept would overide the other. In this case, multiple selections
-              of restrictions and/or preferences displays and ensemble of all possible recipes.</h4>
             <h4><b style="color: darkgreen;">Q:</b> I have questions regarding the app and would like to speak to a
               representative, how can I do such?</h4>
             <h4 style="margin-left: 8%;"><b style="color: darkgreen;">A:</b> Below, there is a "Contact Us" collapsible
