details.html - reads each vlaue properly now

--- a/details.html
+++ b/details.html
@@ -50,9 +50,10 @@
     <br><br>
     <h1 id="details-name"></h1>
     <br><br>
-    <h3><b>Serves</b> : <span id="details-serves">
-      </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Prep-time</b>: <span
-        id="details-Prep_time"></span></h3>
+    <h3><b>Serves</b> : <span id="details-serves"></span>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <b>Prep-time</b>: <span id="details-prep_time"></span>
+    </h3>
     <br>
     <h2 id="details-description"></h2>
     <br>
@@ -60,10 +61,8 @@
     <br>
     <h2><b>Ingredients</b><br> <span id="details-ingredients"></span></h2>
     <br>
-    <h2><b>Nutrients</b><br> <span id="Nutrients"></span></h2>
+    <h2><b>Nutrients</b><br> <span id="details-nutrients"></span></h2>
     <br>
-    <!--iframe id="details-youtube" width="420" height="345" src="...">
-    </iframe-->
   </div>
   <br>
 
@@ -96,8 +95,7 @@
         let ingredients = userDoc.data().Ingredients;
         let prep_time = userDoc.data().Prep_time;
         let serves = userDoc.data().Serves;
-        let Nutrients = userDoc.data().Nutrients;
-        // let youtube = userDoc.data().Youtube;
+        let nutrients = userDoc.data().Nutrients;
 
         console.log(name);
         document.getElementById("details-name").innerHTML = name;
@@ -105,9 +103,8 @@
         document.getElementById("details-description").innerHTML = description;
         document.getElementById("details-ingredients").innerHTML = ingredients;
         document.getElementById("details-serves").innerHTML = serves;
-        document.getElementById("details-prep").innerHTML = prep;
+        document.getElementById("details-prep_time").innerHTML = prep_time;
         document.getElementById("details-nutrients").innerHTML = nutrients;
-        //document.getElementById("details-youtube").innerHTML = youtube;
         document.getElementById('details-img').src = "./images/" + name + ".jpg";
         newcard.querySelector('.details-img').src = "./images/" + name + ".jpg";
 
