--- a/menu.html
+++ b/menu.html
@@ -49,14 +49,14 @@
     </div>
   </template>
 
-  <div class="container rounded bg-white" style="margin-top: 2%;">
-    <h1 style="color: rgb(0, 128, 0); font-size: 5vw; text-align: center; margin-top: 2%">Your <span id="gallery"
+  <div class="container-fluid rounded bg-white" style="margin-top: 2%;">
+    <h1 style="color: rgb(0, 128, 0); font-size: 7vw; text-align: center; margin-top: 2%">Your <span id="gallery"
         style="text-transform: capitalize;"></span> Menu
     </h1>
     <br>
 
     <!-- Here is container for cards  -->
-    <div class="container">
+    <div>
       <div id="Keto-go-here" class="row row-cols-auto"></div>
       <div id="Gluten-Free-go-here" class="row row-cols-auto"></div>
       <div id="Lactose-Free-go-here" class="row row-cols-auto"></div>
