--- a/quiz.html
+++ b/quiz.html
@@ -38,7 +38,7 @@
   </div>
   <br>
 
-  <div class="container rounded bg-white mt-5 mb-5">
+  <div class="container-fluid rounded bg-white mt-5 mb-5">
     <div class="row justify-content-center">
       <div>
         <h1>Fill Out the Form Below to Adjust Your Preferences</h1>
