--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
     </div>
   </template>
 
-  <div class="container rounded bg-white mt-5 mb-5" style="padding-bottom: 2%;">
+  <div class="container-fluid rounded bg-white mt-5 mb-5" style="padding-bottom: 2%;">
     <div class="row">
       <h1 style="font-size: 5vw; text-align: center; margin-top: 2%">Welcome back, <span id="name-goes-here"></span>!
       </h1>
@@ -121,6 +121,8 @@
       db.collection(collection).get()
         .then(snap => {
           var i = 1;
+          let num = 0;
+          
           snap.forEach(doc => { //iterate thru each doc
             var title = doc.data().Name;
             var details = doc.data().Description;
