--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-  <div class="container rounded bg-white mt-5 mb-5">
+  <div class="container-fluid rounded bg-white mt-5 mb-5">
     <div class="row">
       <div class="col-md-3 border-right">
         <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5"
