extended database query to main.html

--- a/main.html
+++ b/main.html
@@ -118,7 +118,7 @@
     function displayCards(collection) {
       let CardTemplate = document.getElementById("CardTemplate");
 
-      db.collection(collection).get()
+      db.collection(collection).orderBy("Name").get()
         .then(snap => {
           var i = 1;
           let num = 0;
@@ -151,7 +151,7 @@
     function displayCards2(collection) {
       let CardTemplate = document.getElementById("CardTemplate");
 
-      db.collection(collection).get()
+      db.collection(collection).orderBy("Name").get()
         .then(snap => {
           var i = 1;
 
