css updates to main

--- a/main.html
+++ b/main.html
@@ -65,7 +65,7 @@
       <div id="Vegetarian-go-here" class="row row-cols-auto"></div>
       <div id="Vegan-go-here" class="row row-cols-auto"></div>
       <br>
-      <h1>Feeling adventurous? <span style="color: green;">Try these!</span></h1>
+      <h1 style="font-size: 3vw; text-decoration: underline; margin-top: 2%;">Feeling adventurous? <span style="color: green;">Try these!</span></h1>
       <div id="Vegan-go-here2" class="row row-cols-auto"></div>
       <div id="Gluten-Free-go-here2" class="row row-cols-auto"></div>
       <div id="Vegetarian-go-here2" class="row row-cols-auto"></div>
